PySCF 1.3 beta (2017-02-?)
--------------------------
* Added
  - sf-X2C for PBC Hamiltonian
  - Overlap of two CI wavefunctions over different orbital bases
  - EOM-CCSD for user guess, Koopmans' excitations, etc
  - approximate EOM-CCSD (MBPT2 ground state and partitioned EOM Hbar)
* Improved
  - better memory management for EOM-CCSD
  - memory usage of the non-symmetric Davidson solver in EOM-CCSD


PySCF 1.3 alpha-2 (2017-01-04)
---------------------------
* Added
  - Supports for 1D, 2D PBC systems
* Improved
  - PBC integral transformation
  - CASSCF state-average interface to handle different spins of sub-solver
  - Numerical stability for Davidson diagonalization solver
  - FCI numerical stability with multithreading
  - FCI with spatial symmetry
* Bugfix
  - X2C to use custom basis for X matrix


PySCF 1.3 alpha-1 (2016-12-04)
---------------------------
* Added
  - Quantum chemistry ECP for solid
  - AO-direct CCSD
  - CI coefficients transformation for one-particle basis rotation
  - CIAH second order SCF solver for PBC KRHF and KUHF
  - CISD and CISD 1, 2-particle density matrices
  - Selected-CI and Selected-CI 1, 2-particle density matrices
  - Smearing for PBC mean-field calculation
  - PBC density fitting
* Improved
  - Optimized CCSD(T)
  - Change the default kpts mesh (to always include gamma point)
  - PBC repeated images used by lattice summation


PySCF 1.2.2
------------------------
* Bugfix
  - GTO normalization in molden file


PySCF 1.2.1 (2017-01-26)
------------------------
* Added
  - transition metal BFD basis
  - script to fix dylib library dependence for Mac
* Bugfix
  - active space 1pdm in mc chkfile if natural orbitals are required
  - dmrg example
  - state-average dmrgci interface
  - analytic GTO-PW integral
  - for population analysis when ecp is presented.
  - for mcscf state-specific function to support ground state as the target state
  - get_coulG round-off bug
  - unit cell size estimation for non-orth crystals