@@ -5,6 +5,7 @@ PySCF 1.3 beta (2017-02-?)
   - Overlap of two CI wavefunctions over different orbital bases
   - EOM-CCSD for user guess, Koopmans' excitations, etc
   - approximate EOM-CCSD (MBPT2 ground state and partitioned EOM Hbar)
+  - AVAS method for constructing mcscf active space
 * Improved
   - better memory management for EOM-CCSD
   - memory usage of the non-symmetric Davidson solver in EOM-CCSD
